JVM options needed for serial on mac